# TopMass80X

./: .gitignore  .hgignore  README.md  TODO
Analyzer/: .Configuration_LeptonJets.conf.kate-swp  AddPDFweights  BuildFile.xml  Configuration_AllJets.conf  Configuration_AllJets_6permu.conf  Configuration_AllJets_7TeV.conf  Configuration_AllJets_paperHS.conf  Configuration_AllJets_paperHSt.conf  Configuration_AllJets_paperOlder.conf  Configuration_AllJets_phd.conf  Configuration_AllJets_phdPFcut.conf  Configuration_AllJets_phdPFcutTIGHT.conf  Configuration_AllJets_phdPFcutTIGHTER.conf  Configuration_AllJets_pr10.conf  Configuration_Hamburg.conf  Configuration_LeptonJets.conf  Configuration_LeptonJets.xml  Configuration_LeptonJets_13TeV.conf  Configuration_LeptonJets_6pfb.conf  Configuration_LeptonJets_8TeV_GenLevel.conf  Configuration_LeptonJets_8TeV_gen_as_reco.conf  Configuration_LeptonJets_8TeV_gen_as_reco_mc.conf  Configuration_LeptonJets_8TeV_gen_as_reco_muons.conf  Configuration_LeptonJets_BReg.conf  Configuration_LeptonJets_Baseline.conf  Configuration_LeptonJets_MSTemplates.conf  Configuration_LeptonJets_diffAlpha.conf  Configuration_LeptonJets_diffB1Eta.conf  Configuration_LeptonJets_diffB1Pt.conf  Configuration_LeptonJets_diffDeltaRbb.conf  Configuration_LeptonJets_diffDeltaRqq.conf  Configuration_LeptonJets_diffHT.conf  Configuration_LeptonJets_diffLeptonCharge.conf  Configuration_LeptonJets_diffLeptonFlavor.conf  Configuration_LeptonJets_diffNJet.conf  Configuration_LeptonJets_diffNVertex.conf  Configuration_LeptonJets_diffQ1Eta.conf  Configuration_LeptonJets_diffQ1Pt.conf  Configuration_LeptonJets_diffTTBarMass.conf  Configuration_LeptonJets_diffTTBarPt.conf  (+38 more)
Analyzer/inc/: Analysis.h  CMS_lumi.h  CommandLineOptionsReader.h  DataSample.h  DummyAnalyzer.h  GenMatchAnalyzer.h  Helper.h  IdeogramAnalyzer.h  IdeogramAnalyzerMinimizer.h  IdeogramAnalyzerNewInterface.h  IdeogramCombLikelihood.h  IdeogramCombLikelihoodAllJets.h  IdeogramCombLikelihoodLeptonJets.h  IdeogramEventLikelihood.h  IdeogramSampleLikelihood.h  MVAAnalyzer.h  MassAnalyzer.h  ProgramOptionsReader.h  RandomSubsetCreator.h  RandomSubsetCreatorAllJets.h  RandomSubsetCreatorLeptonJets.h  RandomSubsetCreatorNewInterface.h  RooFitTemplateAnalyzer.h  TopMass.h  XMLConfigReader.h  tinyxml2.h
Analyzer/plot/: calib.eps
Analyzer/plugins/: BuildFile.xml  EventHypothesisAnalyzer.cc  EventHypothesisAnalyzer.h
Analyzer/python/: EventHypothesisAnalyzer_cff.py  EventHypothesisAnalyzer_cfi.py  EventHypothesisAnalyzer_data_cff.py  __init__.py
Analyzer/root/: AddPDFweights.cc  AddPDFweights_main.cc  CMS_lumi.C  CMS_lumi.h  CRComparison.C  CRStudy.C  MVAObservableCheck.C  PlotsFromRooWorkspace.C  SkimTree.C  SystematicUncertainties.cc  SystematicUncertainties.h  SystematicUncertainties_main.cc  TemplateDerivation.cc  TemplateDerivation.h  TemplateDerivation_main.cc  TopTMVAClassification_C.d  WJets.root  addPDFweights.cc  addPDFweights.h  addPDFweights_main.cc  bFragmentationPlot.C  backgroundComparisonPlots.C  backgroundMethodComparison.C  backgroundValidationPlots.C  backgroundValidationPlotsJets.C  backgroundValidationPlotsNew.C  backgroundValidationPlotsRest.C  batchObservableByJESByMass.C  cCosThetaStar.eps  cEfficiency.eps  cHadTopEta.eps  cHadTopMass.eps  cHadTopMassRes.eps  cHadTopPt.eps  cPermutationWeights.eps  calibration.cc  calibration.h  calibration_main.cc  combinationplot.C  compareTrees.C  (+96 more)
Analyzer/src/: Analysis.cxx  CMS_lumi.cxx  CommandLineOptionsReader.cxx  DataSample.cxx  DummyAnalyzer.cxx  GenMatchAnalyzer.cxx  Helper.cxx  IdeogramAnalyzer.cxx  IdeogramAnalyzerMinimizer.cxx  IdeogramAnalyzerNewInterface.cxx  IdeogramCombLikelihood.cxx  IdeogramCombLikelihoodAllJets.cxx  IdeogramCombLikelihoodLeptonJets.cxx  IdeogramEventLikelihood.cxx  IdeogramSampleLikelihood.cxx  MVAAnalyzer.cxx  MassAnalyzer.cxx  ProgramOptionsReader.cxx  RandomSubsetCreator.cxx  RandomSubsetCreatorAllJets.cxx  RandomSubsetCreatorLeptonJets.cxx  RandomSubsetCreatorNewInterface.cxx  RooFitTemplateAnalyzer.cxx  TopMass.cxx  XMLConfigReader.cxx  main.cxx  tinyxml2.cxx
Analyzer/test/: analyzeTopHypotheses_cfg.py  analyzeTopHypotheses_data_cfg.py  analyzeTopHypotheses_data_muhad_cfg.py  jecDataBaseReader_cfg.py
Analyzer/tests/: TemplateDerivation_test.cc
Configuration/: sparse-checkout
Configuration/JEC/: jecDataBaseReader_cfg.py
Configuration/JSON/: Cert_160404-163261ReRecoMu15Unprescaled.txt
Configuration/PU/: PU_Run2011_finebin.root  expand.C
Configuration/analysis/: JetCorrectionDBWriter_cfg.py  analyzeBJES_cfg.py  analyzeSherpaGenEvent_cfg.py  analyzeTopHypothesesBReg_cfg.py  analyzeTopHypotheses_cfg.py  analyzeTopHypotheses_data_cfg.py  genParticleListDrawer_cfg.py  generateTTJets_analyzeBJES_cfg.py  generateTT_Pythia8_width_FSIM_cfg.py  (+2 more)
Configuration/analysis/common/src/: AnalysisBase.cc  CMakeLists.txt  Correctors.cc  KinematicReconstruction.cc  KinematicReconstructionSolution.cc  KinematicReconstruction_LSroutines.cc  KinematicReconstruction_MeanSol.cc  RootFileReader.cc  ScaleFactors.cc  TextFormatter.cc  TextfileReader.cc  analysisObjectStructs.cc  analysisUtils.cc  plotterUtils.cc  sampleHelpers.cc  utils.cc
Configuration/analysis/diLeptonic/src/: AnalysisHistograms.cc  AnalyzerBaseClass.cc  AnalyzerControlPlots.cc  AnalyzerDoubleDiffXS.cc  AnalyzerKinReco.cc  CMakeLists.txt  DilepSVDFunctions.cc  DyScaleFactors.cc  EffHist.cc  FinalPlot.cc  GlobalScaleFactors.cc  HfFracScaleFactors.cc  Histo.cc  Histo2.cc  HistoListReader.cc  LuminosityScaleFactors.cc  Output.cc  PlotRelDiffs.cc  Plotter.cc  PlotterBTop.cc  Sample.cc  SampleDefinitions.cc  Samples.cc  TopAnalysis.cc  TreeHandlerBase.cc  TreeHandlerBoostedTop.cc  TreeHandlerTTBar.cc  TypicalErrors.cc  UsefulTools.cc  VariablesBase.cc  VariablesBoostedTop.cc  VariablesTTBar.cc  analysisHelpers.cc  analysisStructs.cc  createSystCovMatrix.cc  homelessFunctions.cc  kinRecoEff.cc  load_Analysis.cc  plotterHelpers.cc  plotterclass.cc  (+2 more)
HiggsUtils/: BuildFile.xml
TopEventTree/: BuildFile.xml
TopUtils/: BuildFile.xml
ZTopUtils/: BuildFile.xml
(+3133 files in other folders)
